Bug 249260 - kgpg editor crashes on save
Summary: kgpg editor crashes on save
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-27 20:02 UTC by chiloff
Modified: 2013-03-19 21:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description chiloff 2010-08-27 20:02:44 UTC
Application: kgpg (2.3.0)
KDE Platform Version: 4.4.5 (KDE 4.4.5)
Qt Version: 4.6.3
Operating System: Linux 2.6.33.6-147.fc13.x86_64 x86_64
Distribution: "Fedora release 13 (Goddard)"

-- Information about the crash:
Application crashes on save and ths is 100% reproducable. My current local Lang s LANG=bg_BG.UTF-8


The crash can be reproduced every time.

 -- Backtrace:
Application: KGpg (kgpg), signal: Segmentation fault
82	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[KCrash Handler]
#5  QTextCodec::canEncode (this=0x0, s=...) at codecs/qtextcodec.cpp:1342
#6  0x000000000043177d in KgpgEditor::checkEncoding (this=<value optimized out>, codec=0x0) at /usr/src/debug/kdeutils-4.4.5/kgpg/editor/kgpgeditor.cpp:611
#7  0x0000000000435615 in KgpgEditor::slotFileSave (this=0xf6e070) at /usr/src/debug/kdeutils-4.4.5/kgpg/editor/kgpgeditor.cpp:296
#8  0x0000000000436c3d in KgpgEditor::qt_metacall (this=0xf6e070, _c=QMetaObject::InvokeMetaMethod, _id=10, _a=0x7fff5d277df0)
    at /usr/src/debug/kdeutils-4.4.5/x86_64-redhat-linux-gnu/kgpg/kgpgeditor.moc:151
#9  0x0000003552166a36 in QMetaObject::activate (sender=0xf76db0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff5d277df0) at kernel/qobject.cpp:3295
#10 0x00000035551a6422 in QAction::triggered (this=<value optimized out>, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#11 0x00000035551a7b5b in QAction::activate (this=0xf76db0, event=<value optimized out>) at kernel/qaction.cpp:1255
#12 0x00000035555323ea in QAbstractButtonPrivate::click (this=0xfa9b60) at widgets/qabstractbutton.cpp:528
#13 0x000000355553269c in QAbstractButton::mouseReleaseEvent (this=0xfc1410, e=0x7fff5d278750) at widgets/qabstractbutton.cpp:1121
#14 0x00000035555ed89a in QToolButton::mouseReleaseEvent (this=<value optimized out>, e=<value optimized out>) at widgets/qtoolbutton.cpp:721
#15 0x00000035551f648a in QWidget::event (this=0xfc1410, event=0x7fff5d278750) at kernel/qwidget.cpp:8044
#16 0x00000035551ab39c in QApplicationPrivate::notify_helper (this=0xaf44f0, receiver=0xfc1410, e=0x7fff5d278750) at kernel/qapplication.cpp:4306
#17 0x00000035551b1e2d in QApplication::notify (this=<value optimized out>, receiver=0xfc1410, e=0x7fff5d278750) at kernel/qapplication.cpp:3871
#18 0x0000003c58a07016 in KApplication::notify (this=0xae67e0, receiver=0xfc1410, event=0x7fff5d278750) at /usr/src/debug/kdelibs-4.4.5/kdeui/kernel/kapplication.cpp:302
#19 0x0000003552153ddc in QCoreApplication::notifyInternal (this=0xae67e0, receiver=0xfc1410, event=0x7fff5d278750) at kernel/qcoreapplication.cpp:726
#20 0x00000035551b101e in sendEvent (receiver=0xfc1410, event=0x7fff5d278750, alienWidget=0xfc1410, nativeWidget=0xf6e070, buttonDown=0x3555c2f088, lastMouseReceiver=..., spontaneous=true)
    at ../../src/corelib/kernel/qcoreapplication.h:215
#21 QApplicationPrivate::sendMouseEvent (receiver=0xfc1410, event=0x7fff5d278750, alienWidget=0xfc1410, nativeWidget=0xf6e070, buttonDown=0x3555c2f088, lastMouseReceiver=..., spontaneous=true)
    at kernel/qapplication.cpp:2971
#22 0x0000003555223155 in QETWidget::translateMouseEvent (this=0xf6e070, event=<value optimized out>) at kernel/qapplication_x11.cpp:4380
#23 0x0000003555221acc in QApplication::x11ProcessEvent (this=0xae67e0, event=0x7fff5d279070) at kernel/qapplication_x11.cpp:3513
#24 0x000000355524ab92 in x11EventSourceDispatch (s=0xaf3330, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#25 0x000000354743bd02 in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#26 0x000000354743fae8 in ?? () from /lib64/libglib-2.0.so.0
#27 0x000000354743fc9c in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#28 0x0000003552179863 in QEventDispatcherGlib::processEvents (this=0xac4bc0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:412
#29 0x000000355524a84e in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#30 0x0000003552152822 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#31 0x0000003552152aec in QEventLoop::exec (this=0x7fff5d2793a0, flags=...) at kernel/qeventloop.cpp:201
#32 0x00000035521561bb in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1003
#33 0x0000000000476274 in main (argc=2, argv=0x7fff5d279868) at /usr/src/debug/kdeutils-4.4.5/kgpg/main.cpp:57

Reported using DrKonqi
Comment 1 Rolf Eike Beer 2010-08-29 18:32:59 UTC
SVN commit 1169544 by dakon:

detect if a selected coding is not supported by QTextCodec

CCBUG:249260

 M  +5 -0      kgpgeditor.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1169544
Comment 2 Rolf Eike Beer 2010-08-29 18:34:17 UTC
SVN commit 1169546 by dakon:

fix crash when a selected codec is not supported by QTextCodec

BUG:249260


 M  +3 -0      4.4/kdeutils/kgpg/editor/kgpgeditor.cpp  
 M  +1 -1      4.4/kdeutils/kgpg/main.cpp  
 M  +3 -0      4.5/kdeutils/kgpg/editor/kgpgeditor.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1169546