fix crash when a selected codec is not supported by QTextCodec

BUG:249260

svn path=/branches/KDE/4.4/kdeutils/kgpg/; revision=1169546